--- a/CiTi_CUP2.0/CSS/main_inter.css
+++ b/CiTi_CUP2.0/CSS/main_inter.css
@@ -422,7 +422,7 @@ a:-webkit-any-link {
 
 .intro_sys {
     width: 100%;
-    height: 630px;
+    height: auto;
     background-color: rgb(233, 238, 243);
 }
 
