--- a/CiTi_CUP2.0/CSS/main_inter.css
+++ b/CiTi_CUP2.0/CSS/main_inter.css
@@ -790,3 +790,36 @@ body {
     transform: translateX(16px);
     opacity: 1;
 }
+
+form.search input[type=text] {
+    padding: 10px;
+    font-size: 25px;
+    border: 1px solid grey;
+    float: left;
+    width: 85%;
+    height: 80px;
+    background: #f1f1f1;
+  }
+
+form.search button {
+    float: left;
+    width: 15%;
+    height: 80px;
+    padding: 10px;
+    background: #b7cde2;
+    color: white;
+    font-size: 20px;
+    border: 1px solid grey;
+    border-left: none;
+    cursor: pointer;
+}
+
+form.search button:hover {
+  background: #aadeec;
+}
+
+form.search::after {
+  content: "";
+  clear: both;
+  display: table;
+}
