--- a/CiTi_CUP3.0/CSS/intro_system.css
+++ b/CiTi_CUP3.0/CSS/intro_system.css
@@ -30,7 +30,7 @@ li {
     margin-bottom: 0px;
     margin-left: 0px;
     background-color: rgb(233, 238, 243);
-    background-image: url(../images/search_bgi1.png);
+    background-image: url(../images/search.png);
     /* background-repeat: no-repeat; */
     background-position: top;
     /* background-attachment: fixed; */
