--- a/CiTi_CUP3.0/CSS/intro_system.css
+++ b/CiTi_CUP3.0/CSS/intro_system.css
@@ -22,6 +22,8 @@ li {
     list-style: none;
 }
 
+
+
 .header {
     background-color: rgb(233, 238, 243);
     /* margin: 0 auto; */
@@ -111,7 +113,7 @@ li {
 .intro3 h3 {
     text-align: left;
     font-weight: 400;
-    text-indent: 2em;
+    /* text-indent: 2em; */
     line-height: 40px;
 }
 
@@ -285,38 +287,4 @@ a {
 
 .introduce>ul>li>a:hover {
     color: aquamarine;
-}
-
-
-/* 上栏-右侧登录样式 */
-
-.login {
-    float: left;
-    width: 110px;
-    height: 40px;
-    margin-top: 10px;
-    border-radius: 30px;
-    line-height: 40px;
-    cursor: pointer;
-    position: relative;
-    background-color: rgb(228, 227, 227);
-}
-
-.login>ul>li {
-    float: left;
-    list-style: none;
-    margin-left: 20px;
-    padding: 0 20px;
-    font-size: 18px;
-}
-
-.login:hover {
-    /* filter: alpha(Opacity=60);
-    -moz-opacity: 0.6;
-    opacity: 0.6; */
-    background-color: #fff;
-}
-
-.login>ul>li>a {
-    color: black;
 }
